security: Remove sensitive credentials from documentation files

--- a/СРОЧНО_СМЕНА_ПАРОЛЯ.md
+++ b/СРОЧНО_СМЕНА_ПАРОЛЯ.md
@@ -89,14 +89,14 @@
 
 **Замените старую строку:**
 ```env
-MONGODB_URI=mongodb+srv://vadimlavrenchuk:REDACTED_PASSWORD@mechanicpro.wjylube.mongodb.net/MechanicPro?retryWrites=true&w=majority&appName=MechanicPro
+MONGODB_URI=mongodb+srv://vadimlavrenchuk:OLD_COMPROMISED_PASSWORD@mechanicpro.wjylube.mongodb.net/MechanicPro?retryWrites=true&w=majority&appName=MechanicPro
 ```
 
 **На новую с новым паролем:**
 
 *Если изменили пароль (Вариант A):*
 ```env
-MONGODB_URI=mongodb+srv://vadimlavrenchuk:НОВЫЙ_ПАРОЛЬ_СЮДА@mechanicpro.wjylube.mongodb.net/MechanicPro?retryWrites=true&w=majority&appName=MechanicPro
+MONGODB_URI=mongodb+srv://vadimlavrenchuk:YOUR_NEW_SECURE_PASSWORD@mechanicpro.wjylube.mongodb.net/MechanicPro?retryWrites=true&w=majority&appName=MechanicPro
 ```
 
 *Если создали нового пользователя (Вариант B):*
