feat: Complete mobile responsive design + user management + Excel export
-  Full mobile adaptation (27 files updated)
  - Burger menu for mobile devices
  - Responsive tables -> cards
  - Touch-friendly buttons (44px min)
  - iPhone zoom prevention (16px inputs)
  - All pages optimized for mobile/tablet

-  User management improvements
  - Admin + Chief Mechanic can edit users
  - Edit login, password, name, role
  - 4 language translations added

-  Roles permissions update
  - Chief Mechanic: full admin rights
  - Accountant: view-only inventory
  - Mechanic: view-only schedule

-  Excel export (replaces CSV)
  - Added XLSX export to Schedule, Reports, Inventory
  - Proper Cyrillic support
  - Auto-column width

-  Schedule bug fixes
  - Filter orphaned schedule entries (null userId)
  - Cleanup endpoint added

-  MongoDB auth fixed
  - Updated password in .env

See CHANGELOG_2026-02-22.md for full details

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -223,6 +223,7 @@
     "addNew": "Add Item",
     "addItem": "Add New Item",
     "allCategories": "All Categories",
+    "exportToExcel": "Export to Excel",
     "table": {
       "name": "Name",
       "sku": "SKU",
@@ -336,6 +337,11 @@
     "create": "Create",
     "loading": "Loading...",
     "minChars": "Minimum 6 characters",
+    "edit": "Edit",
+    "editUser": "Edit User",
+    "save": "Save",
+    "passwordOptional": "Leave empty to keep unchanged",
+    "passwordHint": "Enter new password only if you want to change it",
     "roles": {
       "admin": "Administrator",
       "chief_mechanic": "Chief Mechanic",
