--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -205,6 +205,7 @@
     "addNew": "Добавить товар",
     "addItem": "Добавить новый товар",
     "allCategories": "Все категории",
+    "exportToExcel": "Экспорт в Excel",
     "table": {
       "name": "Название",
       "sku": "Артикул",
@@ -316,6 +317,11 @@
     "create": "Создать",
     "loading": "Загрузка...",
     "minChars": "Минимум 6 символов",
+    "edit": "Редактировать",
+    "editUser": "Редактировать пользователя",
+    "save": "Сохранить",
+    "passwordOptional": "Оставьте пустым, чтобы не менять",
+    "passwordHint": "Введите новый пароль только если хотите его изменить",
     "roles": {
       "admin": "Администратор",
       "chief_mechanic": "Главный механик",
